[package]
name = "gemini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
reqwest = { version = "0.11.26", features = ["json"] }
reqwest-eventsource = "0.5.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
