[package]
name = "gemini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
futures-util = "0.3.30"
reqwest = { version = "0.11.26", features = ["json"] }
reqwest-streams = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info", "dynamic-keys"] }
slog-async = "2.8.0"
slog-term = "2.9.1"
tokio = { version = "1.36.0", features = ["full"] }
